# workshop-docker-aovivo

./: README.md  app.py  pyproject.toml
