[project]
name = "workshop-docker-aovivo"
version = "0.1.0"
description = ""
authors = [
    {name = "Victor Almeida",email = "vrodrigoleite@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
